2005-10-15  Quentin Mathe <qmathe@club-internet.fr>

    * Source/PKPreferencesController.m:
    * Source/PKPrefPanesRegistry.m:
    * Source/UKPluginsRegistry.m:
    Written PreferencesKit documentation first part.
    * PreferencesKit.xcodeproj: Tuned a bit build target options.

2005-08-17  Quentin Mathe <qmathe@club-internet.fr>

    * Headers/PKPreferencesController.h (-selectPreferencePaneWithIdentifier:):
    Added (forgotten to declare it in previous commit).

2005-08-17  Quentin Mathe <qmathe@club-internet.fr>

    PreferencesKit is now usable on GNUstep.
    * Source/PKPreferencesController.m:
    (-awakeFromNib): Moved -initUI call before code to load initial preference
    pane because this code needs preferences list view to be set up. Replaced
    -updateUIForPreferencePaneWithPath: call by new method
    -selectPreferencePaneWithIdentifier:.
    (-updateForPreferencePaneWithPath:): Renamed variables 'mainContainerView'
    to 'prefsView' and'theView' to 'paneView'. Removed unused commented code.
    (-selectPreferencePaneWithIdentifier:): New method to change current
    preference pane (equivalent to -switchView: action).
    * Source/PKToolbarPreferencesController.m:
    (-initUI): Moved code to select toolbar item related to current preference
    pane in -selectPreferencePaneWithIdentifier:.
    (-selectPreferencePaneWithIdentifier:): New overriden method.
    (-switchView:): Modified to use -selectPreferencePaneWithIdentifier:.
    (-preferencesView): Added overriden accessor in order to return contentView
    or contentViewWithoutToolbar (on GNUstep) when preferencesView has not been
    set (especially useful because in Gorm we cannot connect outlets to NSWindow
    related content view)
    -(resizePreferencesViewForView:): Rewritten completely to be simpler and
    easier to understand (side effect, it works well now :-).

2005-08-14  Quentin Mathe <qmathe@club-internet.fr>
